# ShadowLearn

./: .gitignore  AUDIT_ANALYSIS.md  AUDIT_REPORT.md  BUGS_CRITIQUES.md  CLEANUP_REPORT.md  CLUELESS_IMPLEMENTATION.md  CODE_ANALYSIS.md  CONTEXT.md  CONTEXT_WINDOW_FIX.md  MAINTENANCE.md  Next_Steps.md  PHASE_0_INSTRUCTIONS.md  PHASE_3A_TESTING.md  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP_SUITE.md  SESSION_FINAL_SUMMARY.md  SESSION_PROGRESS.md  SESSION_UPDATE.md  SYSTEM_OVERVIEW.md  TEST_OPPORTUNITY_TOAST.md  USER_GUIDE.md  audit_logs.txt  chat.html  clean-build.sh  clueless.md  context.html  env.example  hud.html  monitor-logs.sh  package.json  prettier.config.cjs  settings.html  spotlight.html  tsconfig.json  vite.config.ts  vitest.config.ts  watch-console.js
cli/: README.md  (+1 more)
src-tauri/: .allow-warnings.toml  Cargo.toml  Info.plist  entitlements.plist  events.jsonl  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: features.rs  health.rs  lib.rs  main.rs  recovery.rs  snooze.rs  telemetry.rs
src-tauri/src-tauri/: events.jsonl
src-tauri/src/adaptive/: builder.rs  cache.rs  mod.rs  templates.rs
src-tauri/src/artefact/: generator.rs  mod.rs
src-tauri/src/chat/: commands.rs  llm_client.rs  mod.rs
src-tauri/src/clustering/: fingerprint.rs  manager.rs  mod.rs
src-tauri/src/commands/: mod.rs  slash.rs
src-tauri/src/config/: manager.rs  mod.rs  types.rs
src-tauri/src/context/: aggregator.rs  app_detector.rs  clipboard_monitor.rs  errors.rs  idle_detector.rs  mod.rs  preview.rs
src-tauri/src/crypto/: keymanager.rs  mod.rs
src-tauri/src/detection/: file_watcher.rs  mod.rs  patterns.rs
src-tauri/src/digest/: mod.rs
src-tauri/src/flow/: detector.rs  mod.rs
src-tauri/src/focus/: mod.rs
src-tauri/src/intent/: detector.rs  llm_client.rs  mod.rs
src-tauri/src/learn/: exporter.rs  mod.rs
src-tauri/src/learning/: anomaly.rs  feedback.rs  mod.rs  reward.rs  trust.rs
src-tauri/src/ml/: mod.rs  personalization.rs
src-tauri/src/monitor/: change_detector.rs  commands.rs  mod.rs  ocr_client.rs  screen_monitor.rs  smart_cache.rs  vision_client.rs
src-tauri/src/opportunities/: commands.rs  feedback.rs  mod.rs
src-tauri/src/patterns/: commands.rs  learning.rs  mod.rs  prediction.rs  repetition.rs  storage.rs
src-tauri/tests/: e2e_tests.rs
(+138 files in other folders)
