[package]
name = "shadowlearn"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shadowlearn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "macros", "rt", "sync", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = "3.2"
uuid = { version = "1", features = ["v4", "serde"] }
md5 = "0.7"
thiserror = "1"
which = "6"
screenshots = "0.8"
image = { version = "0.25", features = ["jpeg"] }
base64 = "0.22"
tempfile = "3"
once_cell = "1"
dirs = "5"

# J17: Persistance & Mémoire
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# J20: Artefact Validation
midly = "0.5"
sha2 = "0.10"
shellexpand = "3.1"

# J21: Clustering LSH + Intent Detection
lru = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
simd-json = "0.13"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"

# J1-6: Crypto & Keychain
aes-gcm = "0.10"
rand = "0.8"
keyring = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

